odoo/kustomize-mirovniki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-mirovniki
  labels:
    app: odoo-mirovniki
spec:
  type: ClusterIP
  ports:
    - port: 8069
      targetPort: 8069
  selector:
    app: odoo-mirovniki
