odoo/kustomize-mirovniki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-mirovniki
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.zamir.si
        - zamir.si
      secretName: mirovniki-tls
  rules:
    - host: www.zamir.si
      http: &http_paths
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: odoo-mirovniki
                port:
                  number: 8069
    - host: zamir.si
      http: *http_paths
